# riselib

./: README.md  dir_viz_example.ipynb  directory-scanner.py  dum.txt  gis.py  large-directory-scanner.py  output.json  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml
examples/: datawarehouse.ipynb
riselib/: __init__.py  directory_visualizer.py  dw.py  gis.py  math.py  palette.py  plots.py  utils.py  weather.py
riselib/data/: dw.py  era5.py
riselib/utils/: logger.py  utils.py
