[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riselib"
version = "0.0.1"
requires-python = ">=3.8"
authors = [{ name = "Lukas Trippe", email = "lkstrp@pm.me" }]
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/rise-iea/riselib"


# Ruff configuration
# Ruff is a linter and formater to enforce code quality
# For more information see https://gitlab.iea.org/iea/ems/rise/knowledge-database/-/wikis/best-practices/Code-Quality
[tool.ruff]
line-length = 120
ignore-init-module-imports = true

[tool.ruff.lint]
select = [
    'F',    # PyFlakes
    'E',    # pycodestyle
    'W',    # pycodestyle
    'C90',  # mccabe
    'I',    # isort
    'D',    # pydocstyle
    'UP',   # pyupgrade
    'ANN',  # flake8-annotations
    'BLE',  # flake8-blind-except
    'B',    # flake8-bugbear
    'A',    # flake8-builtins
    'C4',   # flake8-comprehensions
    'EM',   # flake8-errmsg
    'ICN',  # flake8-import-conventions
    'PIE',  # flake8-pie
    'T20',  # flake8-print
    'SIM',  # flake8-simplify
    'PD',   # pandas-vet
    'NPY',  # numpy-specific-rules
]
ignore = ['D104', 'D211', 'D213', 'D400', 'ANN101', 'ANN204', 'PD901']

[tool.ruff.format]
quote-style = "single"